--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <title>Tik Tak Toe</title>
+	<link rel="icon" type="img/png" href="icon.ico">
+	<meta name="description" content="Tik tak toe - game by DaRkLoTii">
 	<style>
 		body {
 			margin: 0;
 			padding: 0;
 			box-sizing: border-box;
+			background: url(./media/bg.jpg) center / cover;
 		}
 	</style>
+	<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" defer></script>
+	<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js" defer></script>
   </head>
   <body bgcolor="black">
     <noscript>You need to enable JavaScript to run this app.</noscript>
